deploy/bases/opensearch/opensearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  labels:
    app: opensearch
spec:
  selector:
    app: opensearch
  ports:
  - name: opensearch
    port: 9200
    protocol: TCP
    targetPort: 9200

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch
spec:
  selector:
    matchLabels:
      app: opensearch
  serviceName: opensearch
  replicas: 1
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.19.5@sha256:6aa4ac41d7f611194b316eed5e95e587440acbc624aedf31b85c85128e5234fe
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
        volumeMounts:
        - mountPath: /usr/share/opensearch/data
          name: data
          subPath: data
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 500m
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
